--- a/app/scss/components/_poll.scss
+++ b/app/scss/components/_poll.scss
@@ -8,14 +8,14 @@
     margin: 0 auto;
 
     background-image: url('../../images/poll-bg.svg');
-    background-position: top -3rem left 0;
+    background-position: top -3rem left 3%;
     background-repeat: no-repeat;
   }
 
   &__title {
     line-height: 4.8rem;
     margin-bottom: 2.4rem;
-    max-width: 47.5rem;
+    max-width: 48.5rem;
   }
 
   &__inner {
@@ -32,7 +32,7 @@
 
   &__text {
     font-weight: 500;
-    margin-bottom: 3.6rem;
+    margin-bottom: 1.6rem;
   }
 }
 
