--- a/app/scss/components/_descr.scss
+++ b/app/scss/components/_descr.scss
@@ -1,5 +1,4 @@
 .descr {
-  padding-top: 10rem;
   padding-bottom: 5.2rem;
 
   &__inner {
@@ -12,7 +11,7 @@
 
   &__block {
     &--right {
-      padding-top: 7rem;
+      padding-top: 8rem;
     }
   }
 
@@ -21,12 +20,12 @@
       width: 37.9rem;
       height: 76.1rem;
       margin-left: 1rem;
-      margin-bottom: 8.6rem;
+      margin-bottom: 7.6rem;
     }
 
     &--right {
-      width: 41.7rem;
-      height: 68.7rem;
+      width: 60.7rem;
+      height: 76.5rem;
       margin-top: 9.4rem;
     }
   }
@@ -125,6 +124,21 @@
     &__btn {
       align-self: flex-start;
       margin-bottom: 1.6rem;
+    }
+  }
+}
+
+@media (max-width: 640px) {
+  .descr {
+    &__block-img {
+      &--left,
+      &--right {
+        display: none;
+      }
+    }
+
+    &__block-content {
+      max-width: 100%;
     }
   }
 }
