--- a/app/scss/components/_funds.scss
+++ b/app/scss/components/_funds.scss
@@ -1,7 +1,28 @@
 .funds {
   padding-bottom: 7.2rem;
 
+  &__top {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  &__top-link {
+    font: $font-opensans;
+    color: $darkest-text;
+    font-weight: 700;
+    font-size: 1.6rem;
+    line-height: 3.6rem;
+
+    cursor: pointer;
+  }
+
+  &__title {
+    margin-bottom: 1.6rem;
+  }
+
   &__text {
+    max-width: 75rem;
     margin-bottom: 4.8rem;
   }
   &__list {
