Main page: fixes

--- a/app/scss/components/_btn.scss
+++ b/app/scss/components/_btn.scss
@@ -42,5 +42,10 @@
   .btn {
     font-size: 1.4rem;
     line-height: 2rem;
+
+    &--green {
+      font-size: 1.6rem;
+      line-height: 3.6rem;
+    }
   }
 }
