--- a/app/scss/components/_help.scss
+++ b/app/scss/components/_help.scss
@@ -39,6 +39,7 @@
 
 @media (max-width: 768px) {
   .help {
+    padding-bottom: 3.6rem;
     &__list {
       grid-template-columns: repeat(1, 1fr);
       grid-template-rows: repeat(4, 1fr);
