Page index-redesign: intro section (html + css)

--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -118,6 +118,10 @@ body {
   width: 9rem;
   height: 3rem;
 }
+
+.swiper-pagination.swiper-pagination--intro {
+  bottom: 20rem;
+}
 .swiper-pagination.swiper-pagination-hidden {
   opacity: 0;
 }
