--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -14,6 +14,7 @@
 @import './components/poll';
 @import './components/funds';
 @import './components/fund';
+@import './components/events';
 
 /* Стили главной index-redesign */
 @import './components/intro';
