--- a/app/scss/components/_funds.scss
+++ b/app/scss/components/_funds.scss
@@ -27,9 +27,9 @@
   }
   &__list {
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: repeat(3, 1fr);
     grid-gap: 3rem;
-    margin-bottom: 4.8rem;
+    margin-bottom: 3.6rem;
   }
 
   &__btn-block {
