--- a/app/scss/components/_help.scss
+++ b/app/scss/components/_help.scss
@@ -1,13 +1,13 @@
 .help {
   padding-bottom: 5.6rem;
   &__title {
-    margin-bottom: 3.6rem;
+    margin-bottom: 1.6rem;
   }
   &__list {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(2, 1fr);
-    grid-gap: 2rem;
+    grid-gap: 3.6rem;
   }
 
   &__list-item {
@@ -18,6 +18,29 @@
   }
 
   &__item-link {
+    cursor: pointer;
+  }
+
+  &__item-header {
+    font: $font-inter;
+
+    font-weight: 500;
+    font-size: 1.6rem;
+    line-height: 2rem;
+    padding: 2.4rem 2.4rem 2rem;
+  }
+
+  &__item-title {
+    font-size: 2.4rem;
+    line-height: 3.2rem;
+    margin-bottom: 0.4rem;
+  }
+
+  &__item-text {
+    opacity: 0.8;
+  }
+
+  &__item-footer {
     font: $font-inter;
 
     font-weight: 500;
@@ -25,9 +48,10 @@
     line-height: 2rem;
 
     display: flex;
-    padding: 1.6rem 2.4rem;
+    padding: 1.6rem 2.4rem 2.4rem;
     justify-content: space-between;
     align-items: center;
+    border-top: 0.1rem solid rgba(0, 0, 0, 0.2);
   }
 
   &__link-icon {
