--- a/app/scss/components/_poll.scss
+++ b/app/scss/components/_poll.scss
@@ -1,7 +1,7 @@
 .poll {
   padding-top: 3rem;
   padding-bottom: 3rem;
-  margin-bottom: 5.6rem;
+  margin-bottom: 1.2rem;
 
   &__wrapper {
     max-width: 160rem;
@@ -19,6 +19,7 @@
   }
 
   &__inner {
+    min-height: 36.5rem;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-gap: 3rem;
@@ -28,6 +29,37 @@
     display: flex;
     justify-content: flex-start;
     align-items: center;
+  }
+
+  &__btn {
+    font-family: $font-opensans;
+    padding: 1rem 5.5rem 1rem 8.8rem;
+
+    background-size: 2.4rem 2.4rem;
+    background-repeat: no-repeat;
+    background-position: 5.4rem 50%;
+
+    &:hover {
+      background-size: 2.4rem 2.4rem;
+      background-repeat: no-repeat;
+      background-position: 5.4rem 50%;
+    }
+
+    &--whatsapp {
+      background-image: url('../../images/icon-whatsapp.svg');
+    }
+    &--whatsapp:hover {
+      background-image: url('../../images/icon-whatsapp.svg');
+    }
+    &--telegram {
+      background-image: url('../../images/icon-telegram.svg');
+    }
+    &--telegram:hover {
+      background-image: url('../../images/icon-telegram.svg');
+    }
+    &:not(:last-child) {
+      margin-right: 2.4rem;
+    }
   }
 
   &__text {
@@ -47,6 +79,18 @@
   }
 }
 
+@media (max-width: 860px) {
+  .poll {
+    &__inner {
+      min-height: 16.5rem;
+    }
+    &__wrapper {
+      background-size: 35%;
+      background-position: top 30% left 0;
+    }
+  }
+}
+
 @media (max-width: 767px) {
   .poll {
     &__inner {
@@ -62,6 +106,14 @@
       padding-bottom: 23rem;
       background-size: 80%;
       background-position: bottom 0 left 50%;
+    }
+
+    &__btn-block {
+      flex-direction: column;
+    }
+    &__btn {
+      align-self: flex-start;
+      margin-bottom: 1.6rem;
     }
 
     &__btn {
