--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -9,6 +9,7 @@ $accent-orange: #f3ab00;
 $button-orange: #dda41d;
 $button-green: #a6be6d;
 $border-green: #c3cea9;
+$button-pink: #fad6d5;
 
 /* global breakpoints */
 
@@ -20,3 +21,4 @@ $mw: 120.1;
 $font-inter: 'Inter', 'Arial', sans-serif;
 $font-opensans: 'Open Sans', 'Arial', sans-serif;
 $font-cormorant: 'Cormorant', 'Times New Roman', serif;
+$font-nunito: 'Nunito', 'Arial', serif;
