--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -14,10 +14,16 @@
 @import './components/poll';
 @import './components/funds';
 @import './components/fund';
+@import './components/opinions';
+@import './components/opinion';
 @import './components/events';
 
 /* Стили главной index-redesign */
 @import './components/intro';
+@import './components/info';
+@import './components/give';
+@import './components/complex';
+@import './components/activities';
 
 /* Стили внутренних страниц */
 @import './components/service';
