Page index-redesign: fixes (css)

--- a/app/scss/components/_activities.scss
+++ b/app/scss/components/_activities.scss
@@ -44,5 +44,10 @@
       font-size: 2rem;
       line-height: 2.4rem;
     }
+
+    &__text {
+      font-size: 1.8rem;
+      line-height: 2.4rem;
+    }
   }
 }
