--- a/app/scss/components/_hero.scss
+++ b/app/scss/components/_hero.scss
@@ -49,7 +49,7 @@
   &__title {
     max-width: 69rem;
     font-family: $font-cormorant;
-    font-weight: 400;
+    font-weight: 700;
     font-size: 4.8rem;
     line-height: 5.8rem;
 
@@ -87,14 +87,14 @@
       background-image: url('../../images/icon-heart.svg');
       background-size: 2.4rem 2.4rem;
       background-repeat: no-repeat;
-      background-position: 4rem 50%;
+      background-position: 3.6rem 50%;
     }
 
     &--donate:hover {
       background: #6c7b47 url('../../images/icon-heart.svg');
       background-size: 2.4rem 2.4rem;
       background-repeat: no-repeat;
-      background-position: 4rem 50%;
+      background-position: 3.6rem 50%;
     }
   }
 }
@@ -148,7 +148,7 @@
 @media (max-width: 640px) {
   .hero {
     &__top {
-      padding: 8.6rem 0 2rem;
+      padding: 13.6rem 0 2rem;
     }
     &__title {
       font-size: 4.2rem;
@@ -172,5 +172,18 @@
         background-position: 25% 50%;
       }
     }
+  }
+}
+
+@media (max-width: 380px) {
+  .hero {
+    &__top {
+      min-height: 82.2rem;
+    }
+
+    /*  &__title {
+      font-size: 3.6rem;
+      line-height: 3.6rem;
+    } */
   }
 }
