--- a/app/scss/components/_intro.scss
+++ b/app/scss/components/_intro.scss
@@ -15,8 +15,8 @@
 
     position: relative;
 
-    padding: 25rem 0 6rem;
-    height: calc(100vh - 25rem);
+    padding: 18rem 0 13rem;
+    min-height: calc(100vh - 25rem);
   }
   &__slider-item::after {
     content: '';
@@ -45,6 +45,10 @@
     background-position: bottom center;
     background-repeat: no-repeat;
     background-size: cover;
+  }
+
+  &__item-wrapper {
+    width: 100%;
   }
 
   &__item-inner {
@@ -93,6 +97,15 @@
   }
 }
 
+@media (max-width: 1400px) {
+  .intro {
+    &__slider-item {
+      padding: 15rem 0 15rem;
+      min-height: calc(100vh - 20rem);
+    }
+  }
+}
+
 @media (max-width: 1200px) {
   .intro {
     &__btn {
@@ -107,13 +120,18 @@
       font-size: 5.2rem;
       line-height: 5.2rem;
     }
+    &__slider-item {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
   }
 }
 
 @media (max-width: 860px) {
   .intro {
     &__slider-item {
-      padding: 12rem 0 6rem;
+      padding: 12rem 0 10rem;
     }
     &__btn {
       margin-bottom: 12rem;
