--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -215,6 +215,7 @@ button.swiper-pagination-bullet {
   .swiper-button-next {
     top: -5rem;
     left: 24.5%;
+    right: auto;
   }
 }
 @media (max-width: 1024px) {
