--- a/app/scss/components/_banner.scss
+++ b/app/scss/components/_banner.scss
@@ -2,22 +2,25 @@
   padding: 3.6rem 5.6rem;
   position: relative;
 
-  background-image: url('../../images/banner-image-1.jpg');
+  background-image: url('../../images/logo-picture.svg');
   background-repeat: no-repeat;
-  background-size: 50%;
+  background-size: 17%;
   background-position: 90% 60%;
 
-  border: 0.1rem solid #ffd3d6;
-  box-shadow: 0px 0.4rem 40rem rgba(0, 0, 0, 0.12);
+  border: 0.1rem solid #ececec;
+
+  box-shadow: 0 0.4rem 40rem rgba(0, 0, 0, 0.12);
+
   border-radius: 2.4rem;
   overflow: hidden;
+  margin-bottom: 7.2rem;
 
-  &--spheres {
+  /*   &--spheres {
     background-image: url('../../images/banner-image-2.jpg');
 
     background-size: 38%;
     background-position: 87% 50%;
-  }
+  } */
 
   &__title {
     font-family: $font-cormorant;
@@ -38,9 +41,9 @@
     margin-bottom: 3.6rem;
   }
 
-  &__text--spheres {
+  /*   &__text--spheres {
     max-width: 52rem;
-  }
+  } */
 
   &__more-link {
     display: flex;
@@ -69,7 +72,7 @@
       border-bottom: 0.1rem solid #534647;
     }
   }
-  &__logo {
+  /*   &__logo {
     position: absolute;
     content: '';
     width: 2.9rem;
@@ -77,23 +80,25 @@
     bottom: 3.6rem;
     right: 5.6rem;
     z-index: 5;
-  }
+  } */
 }
 
 @media (max-width: 860px) {
   .banner {
-    background-size: 45%;
-    background-position: 100% 70%;
-    &--spheres {
+    background-position: 90% 70%;
+    margin-bottom: 4.8rem;
+    /*   &--spheres {
       background-size: 38%;
       background-position: 100% 50%;
-    }
+    } */
   }
 }
 
 @media (max-width: 768px) {
   .banner {
-    background-image: none;
+    //background-image: none;
+    background-size: 10%;
+    background-position: 95% 90%;
 
     &--spheres {
       background-image: none;
