--- a/app/scss/components/_info.scss
+++ b/app/scss/components/_info.scss
@@ -1,78 +1,80 @@
 .info {
-  &__title--left {
-    margin-top: 11.5rem;
-    max-width: 43rem;
+  &__title {
+    font-size: 4.8rem;
+    line-height: 5.6rem;
+    margin-bottom: 2rem;
   }
+
   &__text {
-    max-width: 60.5rem;
-    font-family: $font-inter;
-    font-size: 2.4rem;
-    line-height: 3.2rem;
+    font-family: $font-cormorant;
+    color: $grey-text;
+    font-weight: 700;
+    font-size: 3.6rem;
+    line-height: 4.2rem;
     margin-bottom: 3.6rem;
-
-    &--left {
-      max-width: 57rem;
-      color: #000000;
-    }
-  }
-
-  &__btn-block {
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
   }
 
   &__inner {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-gap: 3rem;
+    margin-bottom: 11.5rem;
   }
 
-  &__img {
-    margin-left: auto;
-    width: 53.9rem;
-    height: 73rem;
-  }
-
-  &__list {
-    width: 100%;
-    margin-bottom: 14.5rem;
-  }
-
-  &__list-item {
-    border-radius: 1.6rem;
-    border: 0.1rem solid $border-green;
-
-    &:not(:last-child) {
-      margin-bottom: 2.4rem;
-    }
-  }
-  &__item-link {
+  &__item {
+    position: relative;
+    padding: 2.4rem 3.6rem;
+    min-height: 19.8rem;
+    border-radius: 1.2rem;
+    background-image: url('../images/info-img-1.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+    overflow: hidden;
     display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 1.6rem 2.4rem;
-    font-family: $font-inter;
+    align-items: flex-end;
+    transition: all 0.4s;
+  }
 
-    font-weight: 500;
-    font-size: 1.6rem;
-    line-height: 2rem;
-    cursor: pointer;
+  &__item:hover {
+    transform: translateY(-1.2rem);
+    box-shadow: 0 3.2rem 6.4rem rgba(0, 0, 0, 0.06);
+  }
+
+  &__item::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 2;
+    background: linear-gradient(0deg, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3));
+  }
+
+  &__item-inner {
+    position: relative;
+    z-index: 3;
+  }
+
+  &__item-title {
+    font-family: $font-cormorant;
+
+    font-weight: 700;
+    font-size: 3.6rem;
+    line-height: 4.2rem;
+
+    color: #ffffff;
+  }
+
+  &__text {
+    margin-bottom: 3.6rem;
   }
 }
 
 @media (max-width: 860px) {
   .info {
     margin-top: 4rem;
-    &__img {
-      width: 80%;
-      height: auto;
-      margin-top: 7rem;
-    }
-
-    &__list {
-      margin-bottom: 2.4rem;
-    }
   }
 }
 
@@ -83,20 +85,9 @@
       grid-gap: 2rem;
     }
 
-    &__img {
-      margin-top: 0;
-    }
-
-    /*  &__list {
-      margin-bottom: 8rem;
-    } */
-  }
-}
-
-@media (max-width: 640px) {
-  .info {
-    &__btn {
-      width: 100%;
+    &__title {
+      font-size: 3.6rem;
+      line-height: 4.2rem;
     }
   }
 }
