--- a/app/scss/components/_info.scss
+++ b/app/scss/components/_info.scss
@@ -1,24 +1,31 @@
 .info {
   &__title {
+    margin-bottom: 3.6rem;
+  }
+  &__descr {
+    font-family: $font-cormorant;
+    color: $grey-text;
+    font-weight: 700;
     font-size: 4.8rem;
     line-height: 5.6rem;
-    margin-bottom: 2rem;
+    margin-bottom: 3.6rem;
   }
 
   &__text {
     font-family: $font-cormorant;
     color: $grey-text;
     font-weight: 700;
-    font-size: 3.6rem;
+    font-size: 4.8rem;
     line-height: 4.2rem;
-    margin-bottom: 3.6rem;
+    font-style: italic;
+    margin-bottom: 5rem;
   }
 
   &__inner {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-gap: 3rem;
-    margin-bottom: 11.5rem;
+    margin-bottom: 5.6rem;
   }
 
   &__item {
@@ -75,6 +82,14 @@
 @media (max-width: 860px) {
   .info {
     margin-top: 4rem;
+    &__descr {
+      font-size: 4rem;
+      line-height: 4.8rem;
+    }
+    &__text {
+      font-size: 3.6rem;
+      line-height: 4.2rem;
+    }
   }
 }
 
@@ -83,11 +98,6 @@
     &__inner {
       grid-template-columns: 1fr;
       grid-gap: 2rem;
-    }
-
-    &__title {
-      font-size: 3.6rem;
-      line-height: 4.2rem;
     }
   }
 }
